# sound_server

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  asyncaudio.py  main.py
app/api/: __init__.py  routes.py
app/audio/: processor.py  vad.py
app/core/: audio_manager.py  config.py  stt_processor.py  websocket_manager.py
app/ml/: punctuation.py  speech_to_text.py
app/postprocessor/: __init__.py
app/preprocessor/: __init__.py
app/processing/: post_processor.py  text_manager.py
app/processor/: __init__.py
app/static/css/: style.css
app/static/js/: app.js  audio-processor.js
app/templates/: index.html
app2/: asyncaudio.py  speech2text.py
app2/static/css/: style.css
app2/static/js/: app.js
app2/templates/: index.html
