[tool.poetry]
name = "sound-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.123.0"
numpy = "^2.3.5"
omegaconf = "^2.3.0"
torchaudio = "^2.9.1"
vosk = "^0.3.45"
scipy = "^1.16.3"
librosa = "^0.11.0"
pysoundfile = "^0.9.0.post1"
pydub = "^0.25.1"
soundfile = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
