[tool.poetry]
name = "sound-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.123.0"
numpy = "2.3.5"
uvicorn = "0.38.0"
pydantic-settings = "2.12.0"
vosk = "^0.3.45"
jinja2 = "3.1.6"
annotated-doc = "0.0.4"
annotated-types = "0.7.0"
anyio = "4.12.0"
certifi = "2025.11.12"
charset-normalizer = "3.4.4"
click = "8.3.1"
colorama = "0.4.6"
filelock = "3.20.0"
fsspec = "2025.10.0"
h11 = "0.16.0"
httptools = "0.7.1"
idna = "3.11"
llvmlite = "0.45.1"
markupsafe = "3.0.3"
more-itertools = "10.8.0"
mpmath = "1.3.0"
networkx = "3.6"
numba = "0.62.1"
openai-whisper = "20250625"
pydantic = "2.12.5"
pydantic-core = "2.41.5"
python-dotenv = "1.2.1"
pyyaml = "6.0.3"
regex = "2025.11.3"
requests = "2.32.5"
setuptools = "80.9.0"
starlette = "0.50.0"
sympy = "1.14.0"
tiktoken = "0.12.0"
torch = "2.7.1"
tqdm = "4.67.1"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
urllib3 = "2.5.0"
watchfiles = "1.1.1"
websockets = "15.0.1"
transformers = "4.48.2"
sentencepiece = "0.2.0"
librosa = "0.10.2.post1"
soundfile = "0.12.1"
scipy = "1.15.3"
audioread = "3.1.0"
resampy = "0.4.2"
pydub = "0.25.1"
pyworld = "0.3.4"
matplotlib = "3.9.2"
hf-xet = "^1.2.0"
webrtcvad = "^2.0.10"
noisereduce = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
